@@ -25,13 +25,10 @@ import edu.wpi.first.math.MathUtil;
 import edu.wpi.first.util.PixelFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.photonvision.common.configuration.CameraConfiguration;
-import org.photonvision.common.configuration.ConfigManager;
 import org.photonvision.vision.camera.CameraQuirk;
 import org.photonvision.vision.processes.VisionSourceSettables;
 
@@ -102,12 +99,6 @@ public class GenericUSBCameraSettables extends VisionSourceSettables {
         // Photonvision needs to be able to control auto exposure. Make sure we can
         // first.
         var autoExpProp = findProperty("exposure_auto", "auto_exposure");
-
-        if (expProp.isPresent()) {
-            exposureAbsProp = expProp.get();
-            this.minExposure = exposureAbsProp.getMin();
-            this.maxExposure = exposureAbsProp.getMax();
-        }
 
         if (autoExpProp.isPresent()) {
             autoExposureProp = autoExpProp.get();
@@ -274,21 +265,15 @@ public class GenericUSBCameraSettables extends VisionSourceSettables {
         videoModes = new HashMap<>();
         List<VideoMode> videoModesList = new ArrayList<>();
         try {
-            VideoMode[] modes;
-
-            modes = camera.enumerateVideoModes();
-
-            for (VideoMode videoMode : modes) {
+            for (VideoMode videoMode : camera.enumerateVideoModes()) {
                 // Filter grey modes
                 if (videoMode.pixelFormat == PixelFormat.kGray
                         || videoMode.pixelFormat == PixelFormat.kUnknown) {
                     continue;
                 }
 
-                if (configuration.cameraQuirks.hasQuirk(CameraQuirk.FPSCap100)) {
-                    if (videoMode.fps > 100) {
-                        continue;
-                    }
+                if (configuration.cameraQuirks.hasQuirk(CameraQuirk.FPSCap100) && videoMode.fps > 100) {
+                    continue;
                 }
 
                 videoModesList.add(videoMode);
@@ -302,16 +287,8 @@ public class GenericUSBCameraSettables extends VisionSourceSettables {
         var sortedList =
                 videoModesList.stream()
                         .distinct() // remove redundant video mode entries
-                        .sorted(((a, b) -> (b.width + b.height) - (a.width + a.height)))
-                        .collect(Collectors.toList());
-        Collections.reverse(sortedList);
-
-        // On vendor cameras, respect blacklisted indices
-        var indexBlacklist =
-                ConfigManager.getInstance().getConfig().getHardwareConfig().blacklistedResIndices;
-        for (int badIdx : indexBlacklist) {
-            sortedList.remove(badIdx);
-        }
+                        .sorted(((a, b) -> (a.width + a.height) - (b.width + b.height)))
+                        .toList();
 
         for (VideoMode videoMode : sortedList) {
             videoModes.put(sortedList.indexOf(videoMode), videoMode);
